add a /dev/null filedes, and a "b" menu to background a process and give its PID
This is to make it easier to test sending signals to processes. The plan is to run some processes that sleep a while in the background, and send them signals from the menu commandline.

--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@
 * Implement fcntl to set fd flags [DONE] (for O_CLOEXEC)
 * get atexit functions working
 * get exec() to parse shebang lines if present, and modify argv and parse options like Linux does
+* get daemonized processes working from kernel shell for testing signals
